--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,27 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: utf8
+  template: template0
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: yona
+  password: 
+  host: localhost
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+# データベースの名前。アプリケーションの名前_環境にする
+  database: applicationname_catching
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+# データベースの名前。アプリケーションの名前_環境にする
+  database: applicationname_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+# データベースの名前。アプリケーションの名前_環境にする
+  database: applicationname_production
